added the hero + changed the shadows of the cards

--- a/index.html
+++ b/index.html
@@ -46,7 +46,34 @@
         </nav>
       </div>
     </header>
-    <main></main>
+    <main>
+      <div class="hero">
+        <div class="text">
+          <h1>Life changes can have a major impact on your future pension.</h1>
+          <h2>
+            Are you getting married, buying a shared home or with children on
+            the way? Your pension secures you and your loved ones in the best
+            possible way.
+          </h2>
+        </div>
+        <img
+          class="cornflower"
+          src="./img/cornflower.svg"
+          alt="Icon next to the text in the hero section"
+        />
+      </div>
+      <div class="bulb-card">
+        <img
+          class="lightbulb"
+          src="./img/lightbulb.svg"
+          alt="yellow and small lightbulb"
+        />
+        <p>
+          Adjust your plan when your life changes and receive up to DKK 70,000
+          more in pension.
+        </p>
+      </div>
+    </main>
     <script src="./script.js"></script>
     <script src="subpages.js"></script>
   </body>
