--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>AkademikerPension - Life changes</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./life_changes.css" />
+    <link rel="stylesheet" href="./skeleton.css" />
   </head>
   <body>
     <template>
@@ -46,7 +47,24 @@
         </nav>
       </div>
     </header>
-    <main></main>
+    <main>
+      <div class="skeleton-card">
+        <div class="image"></div>
+        <div class="details">
+          <div class="heading"></div>
+          <div class="paragraph"></div>
+          <div class="button"></div>
+        </div>
+      </div>
+      <div class="skeleton-card">
+        <div class="image"></div>
+        <div class="details">
+          <div class="heading"></div>
+          <div class="paragraph"></div>
+          <div class="button"></div>
+        </div>
+      </div>
+    </main>
     <script src="./script.js"></script>
     <script src="subpages.js"></script>
   </body>
