took the hero out of main

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </nav>
       </div>
     </header>
-    <main>
+    <section>
       <div class="hero">
         <div class="text">
           <h1>Life changes can have a major impact on your future pension.</h1>
@@ -73,7 +73,8 @@
           more in pension.
         </p>
       </div>
-    </main>
+    </section>
+    <main></main>
     <script src="./script.js"></script>
     <script src="subpages.js"></script>
   </body>
