moving the "bulb-card" into a section

--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
           alt="Icon next to the text in the hero section"
         />
       </div>
-      <div class="bulb-card">
+    </section>
+    <div class="wrapper">
+      <section class="bulb-card">
         <img
           class="lightbulb"
           src="./img/lightbulb.svg"
@@ -88,8 +90,8 @@
           Adjust your plan when your life changes and receive up to DKK 70,000
           more in pension.
         </p>
-      </div>
-    </section>
+      </section>
+    </div>
     <main class="wrapper"></main>
     <script src="./script.js"></script>
     <script src="./skeleton.js"></script>
