--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
           </h2>
         </div>
         <img
-          class="cornflower"
-          src="./img/cornflower.svg"
+          class="corn"
+          src="./img/corn.svg"
           alt="Icon next to the text in the hero section"
         />
       </div>
