made the categories

--- a/index.html
+++ b/index.html
@@ -92,6 +92,17 @@
         </p>
       </section>
     </div>
+    <div class="wrapper">
+      <section class="categories">
+        <div class="category-switcher">
+          <button class="category">Alle</button>
+          <button class="category">Familie</button>
+          <button class="category">Job</button>
+          <button class="category">Helbred</button>
+        </div>
+        <div class="search-bar"></div>
+      </section>
+    </div>
     <main class="wrapper"></main>
     <script src="./script.js"></script>
     <script src="./skeleton.js"></script>
