doing the categories' JS

--- a/index.html
+++ b/index.html
@@ -95,10 +95,9 @@
     <div class="wrapper">
       <section class="categories">
         <div class="category-switcher">
-          <button class="category">Alle</button>
-          <button class="category">Familie</button>
-          <button class="category">Job</button>
-          <button class="category">Helbred</button>
+          <template id="categoryTemplate">
+            <button class="category"></button>
+          </template>
         </div>
         <div class="search-bar"></div>
       </section>
