--- a/single-detail.html
+++ b/single-detail.html
@@ -8,7 +8,7 @@
   <title>AkademikerPension - Life changes</title>
   <link rel="stylesheet" href="./style.css" />
   <link rel="stylesheet" href="./details.css" />
-   <!-- <link rel="stylesheet" href="./skeleton.css" />  -->
+  <!-- <link rel="stylesheet" href="./skeleton.css" />  -->
 </head>
 
 <body>
@@ -38,37 +38,44 @@
     </div>
   </header>
 
+  <template id="cardTemplate">
+    <div class="card-one">
+      <h3>Deposit more</h3>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo error ducimus aliquam laudantium repellat
+        asperiores harum, nulla velit tempora animi?</p>
+      <div class="btn">
+        <button>
+          read more
+        </button>
+      </div>
+    </div>
+  </template>
 
   <!-- DETAILS CONTENT -->
-<section id="content">
-  <div class="background">
-    <ul class="breadcrums">
-      <li>Forside -</li>
-      <li>Livsændringer -</li>
-      <li>Du kan ikke længere arbejde</li>
-    </ul>
+  <section id="content">
+    <div class="background">
+      <ul class="breadcrums">
+        <li>Forside -</li>
+        <li>Livsændringer -</li>
+        <li>Du kan ikke længere arbejde</li>
+      </ul>
 
-    <div class="header">
-  <h1>You become unemployed</h1>
-  <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </h2>
-</div>
-</div>
+      <div class="header">
+        <h1>You become unemployed</h1>
+        <div id="paragraph">
+          <!-- <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p> -->
+        </div>
 
-  <div class="card-one">
-    <h3>Deposit more</h3>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo error ducimus aliquam laudantium repellat asperiores harum, nulla velit tempora animi?</p>
-    <div class="btn">
-      <button>
-        read more
-      </button>
-    </div> 
-  </div>
+      </div>
+    </div>
+    <section id="container">
 
-  <div class="card-two">
-    <h3>Subtitle</h3>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo error ducimus aliquam laudantium repellat asperiores harum, nulla velit tempora animi?</p>
-  </div> 
-</section>
+    </section>
+   
+
+    
+  </section>
+
 
   <script src="./details.js"></script>
   <!-- <script src="./skeleton.js"></script> -->
