--- a/single-detail.html
+++ b/single-detail.html
@@ -63,7 +63,7 @@
       <div class="header">
         <h1>You become unemployed</h1>
         <div id="paragraph">
-          <!-- <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p> -->
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
         </div>
 
       </div>
