linked the pages

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
           <h2></h2>
           <p></p>
 
-          <button>
+          <a class="more-btn" href="">
             Read more
             <img class="arrow" src="./img/arrow.svg" alt="" />
-          </button>
+          </a>
         </div>
       </div>
     </template>
