white card on footer

--- a/index.html
+++ b/index.html
@@ -109,15 +109,17 @@
     </div>
     <main class="wrapper"></main>
     <footer>
-      <div class="wrapper footer-wrapper">
-        <div class="like-card">
-          <p>Hvad synes du?</p>
-          <img class="like-icon" src="./img/like.svg" alt="like icon" />
-          <img
-            class="dislike-icon"
-            src="./img/dislike.svg"
-            alt="dislike icon"
-          />
+      <div class="footer-wrapper">
+        <div class="wrapper">
+          <div class="like-card">
+            <p>Hvad synes du?</p>
+            <img class="like-icon" src="./img/like.svg" alt="like icon" />
+            <img
+              class="dislike-icon"
+              src="./img/dislike.svg"
+              alt="dislike icon"
+            />
+          </div>
         </div>
       </div>
     </footer>
