--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             class="thumbnail"
             src="https://images.unsplash.com/photo-1604882355734-95a1db66e744?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
             alt=""
+            loading="lazy"
           />
         </div>
 
@@ -99,7 +100,7 @@
     <div class="wrapper">
       <section class="categories">
         <div class="category-switcher">
-          <button class="category active">All</button>
+          <button class="category active" data-all="yep">All</button>
           <template id="categoryTemplate">
             <button class="category"></button>
           </template>
