--- a/detail.html
+++ b/detail.html
@@ -1,84 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="noindex" />
+    <title>AkademikerPension - Life changes</title>
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/detail.css" />
+    <!-- <link rel="stylesheet" href="./skeleton.css" />  -->
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="robots" content="noindex" />
-  <title>AkademikerPension - Life changes</title>
-  <link rel="stylesheet" href="./style.css" />
-  <link rel="stylesheet" href="./details.css" />
-  <!-- <link rel="stylesheet" href="./skeleton.css" />  -->
-</head>
-
-<body>
-  <!-- HEADER -->
-  <div class="about wrapper">
-    <span>Om AkademikerPension</span>
-  </div>
-  <header>
-    <div class="wrapper">
-      <img class="logo" src="./img/logo.svg" alt="AkademikerPension's logo" />
-      <nav>
-        <ul>
-          <li>
-            <img class="nav-icon" src="./img/search.svg" alt="" />
-          </li>
-          <li>
-            <img class="nav-icon" src="./img/phone.svg" alt="" />
-          </li>
-          <li>
-            <img class="nav-icon" src="./img/login.svg" alt="" />
-          </li>
-          <li>
-            <img class="nav-icon" src="./img/menu.svg" alt="" />
-          </li>
-        </ul>
-      </nav>
+  <body>
+    <!-- HEADER -->
+    <div class="about wrapper">
+      <span>Om AkademikerPension</span>
     </div>
-  </header>
-
-  <template id="cardTemplate">
-    <div class="card-one">
-      <h3>Deposit more</h3>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo error ducimus aliquam laudantium repellat
-        asperiores harum, nulla velit tempora animi?</p>
-      <div class="btn">
-        <button>
-          read more
-        </button>
+    <header>
+      <div class="wrapper">
+        <img class="logo" src="./img/logo.svg" alt="AkademikerPension's logo" />
+        <nav>
+          <ul>
+            <li>
+              <img class="nav-icon" src="./img/search.svg" alt="" />
+            </li>
+            <li>
+              <img class="nav-icon" src="./img/phone.svg" alt="" />
+            </li>
+            <li>
+              <img class="nav-icon" src="./img/login.svg" alt="" />
+            </li>
+            <li>
+              <img class="nav-icon" src="./img/menu.svg" alt="" />
+            </li>
+          </ul>
+        </nav>
       </div>
-    </div>
-  </template>
+    </header>
 
-  <!-- DETAILS CONTENT -->
-  <section id="content">
-    <div class="background">
-      <ul class="breadcrums">
-        <li>Forside -</li>
-        <li>Livsændringer -</li>
-        <li>Du kan ikke længere arbejde</li>
-      </ul>
-
-      <div class="header">
-        <h1>You become unemployed</h1>
-        <div id="paragraph">
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+    <template id="cardTemplate">
+      <div class="card-one">
+        <h3>Deposit more</h3>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo error
+          ducimus aliquam laudantium repellat asperiores harum, nulla velit
+          tempora animi?
+        </p>
+        <div class="btn">
+          <button>read more</button>
         </div>
-
       </div>
-    </div>
-    <section id="container">
+    </template>
 
+    <!-- DETAILS CONTENT -->
+    <section id="content">
+      <div class="background">
+        <ul class="breadcrums">
+          <li>Forside -</li>
+          <li>Livsændringer -</li>
+          <li>Du kan ikke længere arbejde</li>
+        </ul>
+
+        <div class="header">
+          <h1>You become unemployed</h1>
+          <div id="paragraph">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+          </div>
+        </div>
+      </div>
+      <section id="container"></section>
     </section>
-   
 
-    
-  </section>
-
-
-  <script src="./details.js"></script>
-  <!-- <script src="./skeleton.js"></script> -->
-</body>
-
+    <script src="./scripts/details.js"></script>
+    <!-- <script src="./skeleton.js"></script> -->
+  </body>
 </html>
