--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       </div>
     </footer>
 
-    <script src="./scripts/script.js"></script>
-    <script src="./scripts/skeleton.js"></script>
+    <script src="./scripts/script.js" type="module"></script>
+    <script src="./scripts/skeleton.js" type="module"></script>
   </body>
 </html>
