accordion hard coded

--- a/detail.html
+++ b/detail.html
@@ -67,8 +67,15 @@
     <section
       id="content-cards-container"
       class="wrapper content-cards"
-    ></section>
+    >
+  </section>
+    <!-- ACCORDION -->
 
+    <section id="accordion">
+      <div class="question">What am I entitled to?</div>
+      <div class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, culpa.</div>
+    </section>
+  
     <script src="./scripts/details.js"></script>
     <!-- <script src="./skeleton.js"></script> -->
   </body>
