--- a/detail.html
+++ b/detail.html
@@ -72,8 +72,16 @@
     <!-- ACCORDION -->
 
     <section id="accordion">
-      <div class="question">What am I entitled to?</div>
-      <div class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, culpa.</div>
+      <div class="question">
+        <p>
+          What am I entitled to?
+        </p>
+        <p>&#8964;</p>
+       
+       </div>
+      <div class="answer">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, culpa.</p>
+         </div>
     </section>
   
     <script src="./scripts/details.js"></script>
