dynamic not working

--- a/detail.html
+++ b/detail.html
@@ -49,6 +49,20 @@
       </div>
     </template>
 
+<template id="accordion-template">
+  <section id="acc">
+    <div class="question">
+      <p>
+        What am I entitled to?
+      </p>
+      <p>&#8964;</p>
+    </div>
+    <div class="answer">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, culpa.</p>
+    </div>
+  </section>
+</template>
+
     <!-- DETAILS CONTENT -->
     <section class="top-section">
       <img class="image" src="./img/leaves.svg" alt="asdsa" />
@@ -69,21 +83,7 @@
       class="wrapper content-cards"
     >
   </section>
-    <!-- ACCORDION -->
-
-    <section id="accordion">
-      <div class="question">
-        <p>
-          What am I entitled to?
-        </p>
-        <p>&#8964;</p>
-       
-       </div>
-      <div class="answer">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, culpa.</p>
-         </div>
-    </section>
-  
+  <section id="accordion"></section>
     <script src="./scripts/details.js"></script>
     <!-- <script src="./skeleton.js"></script> -->
   </body>
