--- a/detail.html
+++ b/detail.html
@@ -49,7 +49,7 @@
       </div>
     </template>
 
-<template id="accordion-template">
+<template id="question-template">
   <section id="acc">
     <div class="question">
       <p>
@@ -57,7 +57,7 @@
       </p>
       <p>&#8964;</p>
     </div>
-    <div class="answer">
+    <div class="answer hide">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, culpa.</p>
     </div>
   </section>
@@ -78,13 +78,15 @@
         </div>
       </div>
     </section>
-    <section
-      id="content-cards-container"
-      class="wrapper content-cards"
-    >
-  </section>
-  <section id="accordion"></section>
+
+    <section id="content-cards-container" class="wrapper content-cards">
+    </section>
+
+    <section id="accordion">
+
+    </section>
     <script src="./scripts/details.js"></script>
     <!-- <script src="./skeleton.js"></script> -->
-  </body>
-</html>
+    </body>
+
+    </html>
