--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="search-bar"></div>
       </section>
     </div>
-    <main class="wrapper"></main>
+    <main class="wrapper cards-wrapper"></main>
     <footer>
       <div class="wrapper">
         <div class="first-row">
