accordion finished, optimizations

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="robots" content="noindex" />
+    <meta name="robots" content="noindex, nofollow" />
+    <meta
+      name="description"
+      content="AkademikerPension er en medlemsejet pensionskasse for magistre, gymnasielærere og psykologer, ejere og medlemmer er de samme. Det betyder, at alt overskud tilhører medlemmerne."
+    />
     <title>AkademikerPension - Life changes</title>
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/life_changes.css" />
