--- a/detail.html
+++ b/detail.html
@@ -7,6 +7,7 @@
     <title>AkademikerPension - Life changes</title>
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/detail.css" />
+    <link rel="stylesheet" href="./styles/life_changes.css" />
     <!-- <link rel="stylesheet" href="./skeleton.css" />  -->
   </head>
 
@@ -69,7 +70,27 @@
       </div>
       <section id="container"></section>
     </section>
+    <div class="card">
+      <div class="thumbnail-container">
+        <div class="overlay"></div>
+        <img
+          class="thumbnail"
+          src="https://images.unsplash.com/photo-1604882355734-95a1db66e744?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
+          alt=""
+          loading="lazy"
+        />
+      </div>
 
+      <div class="details">
+        <h2></h2>
+        <p></p>
+
+        <a class="more-btn" href="">
+          Read more
+          <img class="arrow" src="./img/arrow.svg" alt="" />
+        </a>
+      </div>
+    </div>
     <script src="./scripts/details.js"></script>
     <!-- <script src="./skeleton.js"></script> -->
   </body>
